Update dependencies. Verify all tests for deployment.

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,9 +2,9 @@
     <td><%=h user.name( :last_first ) %></td>
     <td><%=h user.net_id %></td>
     <td><%=h user.email %></td>
-    <td><%=h user.mobile_phone %></td>
-    <td><%=h user.work_phone %></td>
-    <td><%=h user.home_phone %></td>
+    <td><%=h user.mobile_phone :pretty %></td>
+    <td><%=h user.work_phone :pretty %></td>
+    <td><%=h user.home_phone :pretty %></td>
     <td><%=h user.work_address %></td>
     <td><%=h user.date_of_birth.to_formatted_s(:db) if user.date_of_birth %></td>
     <td><%= user.statuses.join ', ' %></td>
