--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,15 +23,15 @@
 </p>
 
 <p>
-  <b>Mobile phone:</b> <%=h @user.mobile_phone %>
+  <b>Mobile phone:</b> <%=h @user.mobile_phone :pretty %>
 </p>
 
 <p>
-  <b>Work phone:</b> <%=h @user.work_phone %>
+  <b>Work phone:</b> <%=h @user.work_phone :pretty %>
 </p>
 
 <p>
-  <b>Home phone:</b> <%=h @user.home_phone %>
+  <b>Home phone:</b> <%=h @user.home_phone :pretty %>
 </p>
 
 <p>
