Add watchers for committees, motions.  Add managers for enrollments to monitor motions.  Add attachments for motions.  Cocoon motion edit page. Implement authorization and tests for all of the above.

--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -3,6 +3,14 @@
 </p>
 
 <p>
+  <b>Contact name:</b> <%= @committee.contact_name %>
+</p>
+
+<p>
+  <b>Contact email:</b> <%= @committee.contact_email %>
+</p>
+
+<p>
   <b>Active?</b> <%= @committee.active? ? 'Yes' : 'No' %>
 </p>
 
