--- a/app/views/motions/_form.html.erb
+++ b/app/views/motions/_form.html.erb
@@ -5,17 +5,29 @@
     <%= form.input :content, :hint => 'Provide the text of the motion' %>
     <%= form.input :period, :collection => form.object.committee.schedule.periods,
       :hint => 'For what period is the motion sponsored' %>
-    <%= form.semantic_fields_for :sponsorships do |subform| %>
-      <%= subform.inputs do %>
-        <% if subform.object.persisted? %>
-          <li>User: <%= subform.object.user %></li>
-          <%= subform.input :_destroy, :label => "Remove sponsorship", :as => :boolean,
-            :hint => "Check to remove this sponsorship from the motion" %>
-        <% else %>
-          <%= render :partial => 'sponsorships/form', :object => subform %>
-        <% end %>
-      <% end %>
+
+    <%= form.inputs for: :sponsorships, name: 'sponsor' do |subform| %>
+      <%= render partial: 'sponsorships/sponsorship_fields', locals: { f: subform } %>
     <% end %>
+
+    <div class='links'>
+      <p>
+        <%= link_to_add_association 'add sponsorship', form, :sponsorships,
+          partial: 'sponsorships/sponsorship_fields' %>
+      </p>
+    </div>
+
+    <%= form.inputs for: :attachments, name: 'attachment' do |subform| %>
+      <%= render partial: 'attachments/attachment_fields', locals: { f: subform } %>
+    <% end %>
+
+    <div class='links'>
+      <p>
+        <%= link_to_add_association 'add attachment', form, :attachments,
+          partial: 'attachments/attachment_fields' %>
+      </p>
+    </div>
+
   <% end %>
   <%= form.actions %>
 
