Working permissions scheme for started motions.

--- a/app/views/motions/index.html.erb
+++ b/app/views/motions/index.html.erb
@@ -14,7 +14,7 @@
 <hr />
 
 <p>
-<% if @committee && permitted_to?( :create, @committee.motions.build( :period => @committee.periods.active ) ) %>
+<% if @committee && permitted_to?( :create, @committee.motions.build ) %>
 <%= link_to 'New motion', new_committee_motion_path( @committee ) %>
 <% end %>
 <% if @user %>
