Pass authorization tests for started, proposed, and withdrawn states.

--- a/app/views/motions/divide.html.erb
+++ b/app/views/motions/divide.html.erb
@@ -9,19 +9,21 @@ These motions will be considered in the same committee in which this motion is p
 
 <h3>Dividing motions</h3>
 
-<%= semantic_form_for @motion, url: divide_motion_path( @motion ),
-  method: :put do |form| %>
-    <%= form.inputs for: :referred_motions, name: 'dividing motion' do |subform| %>
-      <%= render partial: 'motions/form', locals: { f: subform } %>
-    <% end %>
+<div id="referred_motions">
+  <%= semantic_form_for @motion, url: divide_motion_path( @motion ),
+    method: :put do |form| %>
+      <%= form.inputs for: :referred_motions, name: 'dividing motion' do |subform| %>
+        <%= render partial: 'motions/referred_motion_fields' %>
+      <% end %>
 
-    <div class='links'>
-      <p>
-        <%= link_to_add_association 'add dividing motion', form, :referred_motions,
-          partial: 'motions/form' %>
-      </p>
-    </div>
+      <div class='links'>
+        <p>
+          <%= link_to_add_association 'add dividing motion', form, :referred_motions,
+            render_options: { locals: { committee: @motion.committee } } %>
+        </p>
+      </div>
 
-  <%= form.actions %>
-<% end %>
+    <%= form.actions %>
+  <% end %>
+</div>
 
