--- a/app/views/motions/_form.html.erb
+++ b/app/views/motions/_form.html.erb
@@ -1,10 +1,10 @@
-  <%= render "shared/error_messages", :target => form.object %>
+  <%= render "shared/error_messages", target: form.object %>
   <%= form.inputs do %>
-    <%= form.input :name, :hint => 'Name of the motion' %>
-    <%= form.input :description, :hint => 'Briefly describe purpose and effect of motion' %>
-    <%= form.input :content, :hint => 'Provide the text of the motion' %>
-    <%= form.input :period, :collection => form.object.committee.schedule.periods,
-      :hint => 'For what period is the motion sponsored' %>
+    <%= form.input :name, hint: 'Name of the motion' %>
+    <%= form.input :description, hint: 'Briefly describe purpose and effect of motion' %>
+    <%= form.input :content, hint: 'Provide the text of the motion' %>
+    <%= form.input :period, collection: form.object.committee.schedule.periods,
+      hint: 'For what period is the motion sponsored' %>
 
     <%= form.inputs for: :sponsorships, name: 'sponsor' do |subform| %>
       <%= render partial: 'sponsorships/sponsorship_fields', locals: { f: subform } %>
