Propose, reject, or withdraw motions.

--- a/app/views/motion_events/_motion_event.html.erb
+++ b/app/views/motion_events/_motion_event.html.erb
@@ -3,7 +3,7 @@
   <% unless motion %>
   <td><%= motion_event.motion %></td>
   <% end %>
-  <td><%= motion_event.effective_on %></td>
+  <td><%= motion_event.occurrence %></td>
   <td><%= motion_event.event %></td>
   <td><%= motion_event.description %></td>
 </tr>
