Passing acceptance test for divided motion.

--- a/app/views/motions/_event.html.erb
+++ b/app/views/motions/_event.html.erb
@@ -1,4 +1,4 @@
-<td><% if motion.status_paths.events.include?(event) && permitted_to?( event, motion )
+<td><% if motion.status_events.include?(event) && permitted_to?( event, motion )
   %><%=link_to event.to_s.titleize, polymorphic_path( [ event, motion ] ),
-  method: Motion::EVENTS_PUTONLY.include?(event) ? :put : :get %><% else %><% end %></td>
+ ( Motion::EVENTS_PUTONLY.include?(event) ? { method: :put } : {} ) %><% else %><% end %></td>
 
