Event date setting cannot work in present configuration.

--- a/app/views/motions/merge.html.erb
+++ b/app/views/motions/merge.html.erb
@@ -9,8 +9,8 @@ Use this form to merge the motion to another motion proposed before the same com
 <h3>Motion to which it will be merged</h3>
 
 <%= semantic_form_for @motion_merger, as: :motion_merger,
-  url: merge_motion_path( @motion_merger.merged_motion ) do |form| %>
-  <%= render partial: 'motions/event_form', object: form %>
+  url: merge_motion_path( @motion_merger.merged_motion ),
+  method: :put do |form| %>
   <%= form.inputs do %>
     <%= form.input :motion, as: :select,
       collection: @motion_merger.merged_motion.mergeable_motions,
