Acceptance test for merge.

--- a/app/views/motion_events/_motion_events.html.erb
+++ b/app/views/motion_events/_motion_events.html.erb
@@ -12,7 +12,8 @@
 </tr>
 </thead>
 <tbody>
-<%=render partial: 'motion_events/motion_event', collection: motion_events.ordered %>
+<%=render partial: 'motion_events/motion_event', collection: motion_events.ordered,
+  locals: { motion: motion } %>
 </tbody>
 </table>
 <% else %>
