Fix some issues in sponsored vs. referred motions.

--- a/app/views/motions/_motion.html.erb
+++ b/app/views/motions/_motion.html.erb
@@ -1,6 +1,6 @@
 <% committee ||= false %>
 <% period ||= false %>
-  <%= table_row_tag do %>
+  <%= table_row_tag(true, false, { id: "motion-#{motion.id}" }) do %>
     <% unless committee %>
     <td><%= motion.committee %></td>
     <% end %>
