--- a/app/views/motions/show.html.erb
+++ b/app/views/motions/show.html.erb
@@ -1,4 +1,6 @@
+<div id="motion-<%= @motion.id %>">
 <%= render partial: 'motions/detail', locals: { motion: @motion } %>
+</div>
 
 <h3>Events</h3>
 
