Remove old motion acceptance tests.  Refactor authorities tests to new cucumber approach.

--- a/app/views/authorities/index.html.erb
+++ b/app/views/authorities/index.html.erb
@@ -1,16 +1,6 @@
 <h2>Listing authorities</h2>
 
-<table>
-  <thead>
-  <tr>
-    <th>Name</th>
-  </tr>
-  </thead>
-  <tbody>
-  <%= render :partial => 'authority', :collection => @authorities %>
-  </tbody>
-</table>
-
+<%= render partial: "authorities/authorities", object: @authorities %>
 <hr />
 
 <p>
