--- a/app/views/brands/_brands.html.erb
+++ b/app/views/brands/_brands.html.erb
@@ -1,11 +1,11 @@
-<table>
+<table id="brands">
 <thead>
   <tr>
     <th>Name</th>
   </tr>
 </thead>
 <tbody>
-<%= render :partial => "brands/brand", :collection => brands %>
+<%= render partial: "brands/brand", collection: brands %>
 </tbody>
 </table>
 
