--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -1,9 +1,12 @@
   <%= render "shared/error_messages", :target => form.object %>
   <%= form.inputs do %>
   <%= form.input :name %>
-  <%= form.input :contact_name, hint: 'What is the name that should appear in from for messages regarding this committee?' %>
-  <%= form.input :contact_email, hint: 'What is the email that should appear in from for messages regarding this committee?' %>
-  <%= form.input :active, as: :radio, hint: 'Is committee active for staffing and motion purposes?' %>
+  <%= form.input :contact_name,
+    hint: 'What is the name that should appear in from for messages regarding this committee?' %>
+  <%= form.input :contact_email,
+    hint: 'What is the email that should appear in from for messages regarding this committee?' %>
+  <%= form.input :active, as: :radio, label: 'Active?',
+    hint: 'Is committee active for staffing and motion purposes?' %>
   <%= form.input :schedule, hint: 'On what schedule are sessions of the committee organized?' %>
   <%= form.input :brand %>
   <%= form.input :join_message %>
