Add/remove enrollments directly through committee edit form.

--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -1,4 +1,4 @@
-  <%= render "shared/error_messages", :target => form.object %>
+  <%= render "shared/error_messages", target: form.object %>
   <%= form.inputs do %>
   <%= form.input :name %>
   <%= form.input :contact_name,
@@ -13,5 +13,19 @@
   <%= form.input :leave_message %>
   <%= form.input :reject_message %>
   <% end %>
+
+  <%= form.inputs for: :enrollments, name: 'enrollment' do |subform| %>
+    <%= render partial: 'enrollments/enrollment_fields', locals: { f: subform,
+      committee: form.object } %>
+  <% end %>
+
+  <div class='links'>
+    <p>
+      <%= link_to_add_association 'add enrollment', form, :enrollments,
+        partial: 'enrollments/enrollment_fields',
+        render_options: { locals: { committee: form.object } } %>
+    </p>
+  </div>
+
   <%= form.actions %>
 
