--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -1,3 +1,4 @@
+<div id="position-<%= @position.id %>">
 <p>
   <b>Name:</b> <%=h @position.name %>
 </p>
@@ -50,6 +51,13 @@
 <p><b>Reject message:</b></p>
 
 <%=markdown @position.reject_message %>
+
+<h3>Enrollments</h3>
+
+<%= render partial: 'enrollments/enrollments', object: @position.enrollments,
+  locals: { position: @position } %>
+
+</div> <!-- #position -->
 
 <p>
 <% if permitted_to? :edit, @position -%>
