--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -12,7 +12,7 @@
 <%= paginate @positions %>
 </p>
 
-<%= render partial: "positions", object: @positions %>
+<%= render partial: "positions/positions", object: @positions %>
 <p>
 <%= paginate @positions %>
 </p>
