Get rid of old quizzes acceptance tests.  Some work on questions migration.

--- a/app/views/questions/_questions.html.erb
+++ b/app/views/questions/_questions.html.erb
@@ -10,7 +10,7 @@
   </thead>
 
   <tbody>
-  <%= render partial: 'questions/question', collection: @questions %>
+  <%= render partial: 'questions/question', collection: questions %>
   </tbody>
 
 </table>
