--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,13 +1,14 @@
-  <%= render "shared/error_messages", :target => form.object %>
+  <%= render "shared/error_messages", target: form.object %>
   <%= form.inputs do %>
   <%= form.input :name %>
-  <%= form.input :disposition, :as => :select, :collection => Question::DISPOSITIONS,
-    :hint => 'How should the question be presented to the user?' %>
-  <%= form.input :content %>
-  <%= form.input :global, :as => :radio %>
+  <%= form.input :disposition, as: :select, collection: Question::DISPOSITIONS,
+    hint: 'How should the question be presented to the user?' %>
+  <%= form.input :content,
+    hint: 'What is the text of the question?' %>
+  <%= form.input :global, as: :radio, label: 'Global?',
+    hint: "Should the answer default to what has been given to the same question in other requests?" %>
   <% end %>
-  <%= form.inputs :name => 'Quizzes' do %>
-  <%= form.input :quizzes, :as => :check_boxes %>
-  <% end %>
+  <%= form.input :quizzes, as: :check_boxes,
+    hint: 'In which quizzes should this question appear?' %>
   <%= form.actions %>
 
